Start implementing comments in frontend.
