# server-app/swagger/swagger_output.json
@@ -48,7 +48,8 @@
       },
       "post": {
         "tags": [
-          "Categories"
+          "Categories",
+          "Admin"
         ],
         "description": "",
         "parameters": [
@@ -103,6 +104,55 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Categories",
+          "Admin"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
@@ -163,6 +213,28 @@
         ],
         "description": "",
         "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/products/ratings/stats/{productId}": {
+      "get": {
+        "tags": [
+          "Products",
+          "Ratings"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "productId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -617,7 +689,7 @@
         }
       }
     },
-    "/api/users/comments/": {
+    "/api/users/comments/{id}": {
       "put": {
         "tags": [
           "Products",
@@ -626,6 +698,12 @@
         ],
         "description": "",
         "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "x-auth-token",
             "in": "header",
@@ -637,9 +715,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "commentId": {
-                  "example": "any"
-                },
                 "description": {
                   "example": "any"
                 }
@@ -671,21 +746,15 @@
         "description": "",
         "parameters": [
           {
-            "name": "x-auth-token",
-            "in": "header",
+            "name": "id",
+            "in": "path",
+            "required": true,
             "type": "string"
           },
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "commentId": {
-                  "example": "any"
-                }
-              }
-            }
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
